--- a/HTML3/PiStyle.html
+++ b/HTML3/PiStyle.html
@@ -15,7 +15,7 @@
             
         </span>
         <div class="start_inf">
-            <p>FACEBOOK</p>
+            <p>FACEBOO</p>
             <img src="./assert/icon/icons8-facebook.svg" alt="icons">
         </div>
         <div class="start_inf">
